tests/snapshots/examples_fixtures/type_system__14_generic_hof_modules.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/14_generic_hof_modules.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
