tests/snapshots/examples_fixtures/type_system__16_effect_annotated.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/16_effect_annotated.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode call target binding
== stdout ==
<not executed>
