tests/snapshots/examples_fixtures/type_system__17_effect_decl.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/17_effect_decl.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/17_effect_decl.flx:21:1
   |
21 | print(greet("hello"))
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/17_effect_decl.flx:21:1
   |
21 | print(greet("hello"))
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
