tests/snapshots/examples_fixtures/type_system__18_handle_basic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/18_handle_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
