tests/snapshots/examples_fixtures/type_system__19_effect_call_propagation.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/19_effect_call_propagation.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode call target binding
== stdout ==
<not executed>
