tests/snapshots/examples_fixtures/type_system__62_real_program_module_pipeline.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/62_real_program_module_pipeline.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
